update profile route
